test/pass/coercion2.sest
module Coercion2 :> sig
  val apply<$a, $b> : fun(fun($a) -> $b, $a) -> $b
  val apply2 : fun(fun(int) -> bool, int) -> bool
end = struct
  val apply(f, x) = f(x)
  val apply2(f, x) = apply(f, x)
  val succ(n) = n + 1
  val main(_) = print_debug(apply(succ, 42))
end
