test/fail/error_coercion3.sest
module ErrorCoercion3 = struct
  module Impl = struct
    let f(n) = n + 1
  end
  module Api = Impl :> sig
    val f<$a> : fun($a) -> $a
  end
end
